--- a/proyectoangular/src/app/components/tienda2/tienda2.component.html
+++ b/proyectoangular/src/app/components/tienda2/tienda2.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <h5 class="pt-5 fw-bold ">Para perros</h5>
+    <h5 class="pt-5 fw-bold ">Para gatos</h5>
 </section>
 
 <div class="container w-75">
@@ -8,31 +8,12 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-lg-4  col-sm-12 ">
                 <div class="card h-100">
-                    <img src="assets/img/producto 1 perros.png" class="card-img-top w-50 rounded mx-auto d-block"
-                        alt="...">
-                    <div class="card-body">
-                        <h6 class="card-title fs text-center">Bufanda para perros</h6>
-                        <p class="precio text-center">$ 75.000</p>
-
-                        <div class="input-group mb-3 px-5">
-                            <span class="input-group-text">-</span>
-                            <input type="text" class="form-control text-center" placeholder="0"
-                                aria-label="Amount (to the nearest dollar)">
-                            <span class="input-group-text">+</span>
-                        </div>
-                        <a href="Detalleproducto.html" class="text-decoration-none"><button type="button"
-                            class="btn text-white fw-bold w-50 boton1 d-flex justify-content-center align-items-center" >Agregar</button></a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="col-lg-4  col-sm-12 ">
-                <div class="card h-100">
-                    <img src="assets/img/producto 2 perros.png" class="card-img-top w-50 rounded mx-auto d-block"
+                    <img src="assets/img/producto-1-gatos.png" class="card-img-top w-50 mt-3 rounded mx-auto d-block"
                         alt="..."><br>
                     <div class="card-body">
-                        <h6 class="card-title text-center">Pañoleta para perro</h6>
-                        <p class="precio text-center">$ 60.000</p>
+                        <h6 class="card-title fs text-center">Smoking para gatos</h6>
+                        <p class="precio text-center">$ 113.000</p>
+
                         <div class="input-group mb-3 px-5">
                             <span class="input-group-text">-</span>
                             <input type="text" class="form-control text-center" placeholder="0"
@@ -47,11 +28,30 @@
             </div>
             <div class="col-lg-4  col-sm-12 ">
                 <div class="card h-100">
-                    <img src="assets/img/Producto perros 3.png" class="card-img-top w-50 rounded mx-auto d-block"
+                    <img src="assets/img/producto-2-gatos.png" class="card-img-top w-50 mt-3 rounded mx-auto d-block"
                         alt="..."><br>
                     <div class="card-body">
-                        <h6 class="card-title text-center">Chaqueta para perro doble faz</h6>
-                        <p class="precio text-center">$ 130.000</p>
+                        <h6 class="card-title text-center">Buzo de invierno para gatos</h6>
+                        <p class="precio text-center">$ 95.000</p>
+                        <div class="input-group mb-3 px-5">
+                            <span class="input-group-text">-</span>
+                            <input type="text" class="form-control text-center" placeholder="0"
+                                aria-label="Amount (to the nearest dollar)">
+                            <span class="input-group-text">+</span>
+                        </div>
+                        <button type="button"
+                            class="btn text-white fw-bold w-50 boton1 d-flex justify-content-center align-items-center">Agregar</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-4  col-sm-12 ">
+                <div class="card h-100">
+                    <img src="assets/img/producto-3-gatos.png" class="card-img-top w-50 mt-3 rounded mx-auto d-block"
+                        alt="..."><br>
+                    <div class="card-body">
+                        <h6 class="card-title text-center">Sueter para gatos</h6>
+                        <p class="precio text-center">$ 96.000</p>
                         <div class="input-group mb-3 px-5">
                             <span class="input-group-text">-</span>
                             <input type="text" class="form-control text-center" placeholder="0"
@@ -69,17 +69,17 @@
 </div>
 
 
-<div class="container w-75 cartas">
+<div class="container w-75">
     <div class="row d-flex justify-content-center align-items-center">
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-lg-4  col-sm-12 ">
                 <div class="card h-100">
-                    <img src="assets/img/producto 4 perros.png" class="card-img-top w-50 rounded mx-auto d-block"
+                    <img src="assets/img/producto-4-gatos.png" class="card-img-top w-50  mt-3 rounded mx-auto d-block"
                         alt="..."><br>
                     <div class="card-body">
-                        <h6 class="card-title text-center">Buzo capota para perro</h6>
-                        <p class="precio text-center">$ 115.000</p>
+                        <h6 class="card-title text-center">Sudadera azul para gatos</h6>
+                        <p class="precio text-center">$ 85.000</p>
                         <div class="input-group mb-3 px-5">
                             <span class="input-group-text">-</span>
                             <input type="text" class="form-control text-center" placeholder="0"
@@ -95,11 +95,11 @@
             </div>
             <div class="col-lg-4  col-sm-12 ">
                 <div class="card h-100">
-                    <img src="assets/img/producto 5 perros.png" class="card-img-top w-50 rounded mx-auto d-block"
+                    <img src="assets/img/producto-5-gatos.png" class="card-img-top w-50 mt-3 rounded mx-auto d-block"
                         alt="..."><br>
                     <div class="card-body">
-                        <h6 class="card-title text-center">Buzo sport para perro </h6>
-                        <p class="precio text-center">$ 95.000</p>
+                        <h6 class="card-title text-center">Buzo a rayas blanco y negro</h6>
+                        <p class="precio text-center">$ 65.000</p>
                         <div class="input-group mb-3 px-5">
                             <span class="input-group-text">-</span>
                             <input type="text" class="form-control text-center" placeholder="0"
@@ -114,11 +114,11 @@
             </div>
             <div class="col-lg-4  col-sm-12 ">
                 <div class="card h-100">
-                    <img src="assets/img/producto 6 perros.png" class="card-img-top w-50 mt-0 rounded mx-auto d-block imgf"
-                        alt="...">
+                    <img src="assets/img/producto-6-gatos.png"
+                        class="card-img-top w-50 mt-3 rounded mx-auto d-block imgf" alt="...">
                     <div class="card-body">
-                        <h6 class="card-title text-center">Buzo axel para perro</h6>
-                        <p class="precio text-center">$ 90.000</p>
+                        <h6 class="card-title text-center">Conjunto de verano para gatos</h6>
+                        <p class="precio text-center">$ 120.000</p>
                         <div class="input-group mb-3 px-5">
                             <span class="input-group-text">-</span>
                             <input type="text" class="form-control text-center" placeholder="0"
@@ -152,6 +152,3 @@
         </li>
     </ul>
 </nav>
-
-
-
