--- a/proyectoangular/src/app/components/footer/footer.component.html
+++ b/proyectoangular/src/app/components/footer/footer.component.html
@@ -1,3 +1,11 @@
+<div>
+    <div class="fixed-bottom text-end p-4 mb-5">
+        <a href="https://chat.whatsapp.com/HR5WYDVgo3M8yBCd9O9YcT" target="_blank"
+            class="text-decoration-none"><span class="Colortext bg-light p-2 rounded-2 ">¿Necesitas
+                ayuda?</span><img src="assets/img/Chat icon.png" width="80" height="70"></a>
+    </div>
+
+</div>
 <footer class="miFooter d-flex me-auto mb-2 mb-lg-0">
     <div class="container d-flex justify-content-between me-auto mb-2 mb-lg-0 mt-4">
         <div class="d-flex">
