--- a/proyectoangular/src/app/components/home/home.component.html
+++ b/proyectoangular/src/app/components/home/home.component.html
@@ -18,17 +18,17 @@
         <div class="col-lg-6 col-sm-12 mb-3 ">
             <div class="carruselInicio ">
                 <div class="fondo1 d-flex justify-content-center align-items-end">
-                    <a href="tiendaperros.html"
+                    <a routerLink="/perros"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2 px-3 rounded-top">Para
                         perros</a>
                 </div>
                 <div class="fondo2 d-flex justify-content-center align-items-end">
-                    <a href="tiendaperros.html"
+                    <a routerLink="/perros"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2 px-3 rounded-top">Para
                         perros</a>
                 </div>
                 <div class="fondo3 d-flex justify-content-center align-items-end">
-                    <a href="tiendaperros.html"
+                    <a routerLink="/perros"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2 px-3 rounded-top">Para
                         perros</a>
                 </div>
@@ -38,17 +38,17 @@
         <div class="col-lg-6 col-sm-12 ">
             <div class="carruselInicio2 ">
                 <div class="fondo2-1 d-flex justify-content-center align-items-end">
-                    <a href="tiendagatos.html"
+                    <a routerLink="/gatos"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2  px-3 rounded-top"> Para
                         gatos</a>
                 </div>
                 <div class="fondo2-2 d-flex justify-content-center align-items-end">
-                    <a href="tiendagatos.html"
+                    <a routerLink="/gatos"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2  px-3 rounded-top"> Para
                         gatos</a>
                 </div>
                 <div class="fondo2-3 d-flex justify-content-center align-items-end">
-                    <a href="tiendagatos.html"
+                    <a routerLink="/gatos"
                         class="text-decoration-none Colortext bg-light bg-opacity-50 fs-2 px-3 rounded-top">
                         Para gatos</a>
                 </div>
@@ -225,11 +225,4 @@
     </div>
 
 </section>
-<div>
-    <div class="fixed-bottom text-end p-4 mb-5">
-        <a href="https://chat.whatsapp.com/HR5WYDVgo3M8yBCd9O9YcT" target="_blank"
-            class="text-decoration-none"><span class="Colortext bg-light p-2 rounded-2 ">¿Necesitas
-                ayuda?</span><img src="assets/img/Chat icon.png" width="80" height="70"></a>
-    </div>
 
-</div>
