--- a/proyectoangular/src/app/components/navbar/navbar.component.html
+++ b/proyectoangular/src/app/components/navbar/navbar.component.html
@@ -10,11 +10,11 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item opcionNav">
-                    <a class="nav-link active opcionp" aria-current="page" href="tiendaperros.html"><span class="tonobtn1 fw-semibold">Para perros <i
+                    <a class="nav-link active opcionp" aria-current="page"  routerLink="/perros"><span class="tonobtn1 fw-semibold">Para perros <i
                         class="fa-solid fa-dog"></i></span></a>
                 </li>
                 <li class="nav-item opcionNav ">
-                    <a class="nav-link active text-white" aria-current="page" href="tiendagatos.html">Para gatos <i
+                    <a class="nav-link active text-white" aria-current="page" routerLink="/gatos">Para gatos <i
                             class="fa-solid fa-cat"></i></a>
                 </li>
             </ul>
